--- a/Web-Practic3/friends.html
+++ b/Web-Practic3/friends.html
@@ -6,48 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friend</title>
     <style>
+      th, td {
+            text-align: center;
+            border: 1.5px solid black;
+            min-width: 30px;}
+            .center:nth-child(odd)  {
+            background-color: gray;
+        }
         
-    </style>
+    </style>    
 </head>
 <body>
     <h1>Друзі Козьменчука Андрія Васильвича</h1>
     <a href="index.html" title="Назад на головну"><p>Назад на головну</p></a>
         <table cellpadding=2 border=1>
             <caption><h2>Мої друзі</h2></caption>
-            <tr align="center">
+            <tr class="center1">
                 <th>Прізвище</th>
                 <th>Ім'я</th>
                 <th>Дата народження</th>
                 <th>Адрес проживання</th>
                 <th>Контактний телефон</th>
             </tr>
-            <tr align="center">
+            <tr class="center">
                 <td>Пліхтяк</td>
                 <td>Микола</td>
                 <td>10.5.2005</td>
                 <td>Вул.Сухомлинського</td>
                 <td>+380978412423</td>
             </tr>
-            <tr align="center">
+            <tr class="center">
                 <td>Павлюк</td>
                 <td>Віталій</td>
                 <td>21.05.2005</td>
                 <td>Вул.Надвірна</td>
                 <td>+380975558399</td>
             </tr>
-            <tr align="center">
+            <tr class="center">
                 <td>Гордіюк</td>
                 <td>Віка</td>
                 <td>13.08.2003</td>
                 <td>вул.Стефаника</td>
                 <td>+380676689410</td>
             </tr>
-            <tr align="center">
+            <tr class="center">
                 <td>Абрамович</td>
                 <td>Ілля</td>
                 <td>14.07.2004</td>
                 <td>вул.Шевченка</td>
                 <td>+380675553959</td>
             </tr>
+            
 </body>
 </html>
