--- a/Web-Practic6/index.html
+++ b/Web-Practic6/index.html
@@ -20,7 +20,7 @@
     
  </div class = "Main">
  <div class="Caption">
-    <p id="MId1"><a href="biography.html" >Біографія</a></p></div>
+    <p id="MId1"><a href="Biography.html" >Біографія</a></p></div>
     <div class="Caption">
     <p><a href="novadays.html"   id="Mid2">Сьогодення</a></p></div>
     <div class="Caption">
